--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,12 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.1.3"
 psycopg2-binary = "^2.9.5"
+django-money = "^3.0.0"
 
+
+[tool.poetry.group.tests.dependencies]
+pytest = "^7.2.0"
+pytest-django = "^4.5.2"
 
 [build-system]
 requires = ["poetry-core"]
