--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 django = "^4.1.3"
 psycopg2-binary = "^2.9.5"
 django-money = "^3.0.0"
+beautifulsoup4 = "^4.11.1"
 
 
 [tool.poetry.group.tests.dependencies]
